<resources>
    <string name="app_name">TravelAppProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">573637724075693</string>
    <string name="fb_login_protocol_scheme">fb573637724075693</string>
    <string name="facebook_client_token">b1ed029252fec745acf1eafb8638d716</string>
    <string name="web_client_id" translatable="false">208595860126-01grgtr12e7367v89f4n84b385trqe23.apps.googleusercontent.com</string>
    <string name="default_web_client_id1" translatable="false">208595860126-qntkok3ud18to6ql0v55tjdfcrc8n6nn.apps.googleusercontent.com</string>
    <string name="ha_noi">Hà Nội</string>
    <string name="da_nang">Đà Nẵng</string>
    <string name="hoi_an">Hội An</string>
    <string name="sai_gon">Sài Gòn</string>
    <string name="phu_quoc">Phú Quốc</string>
    <string name="nha_trang">Nha Trang</string>
    <string name="da_lat">Đà Lạt</string>
    <string name="title_activity_room_detail">RoomDetailActivity</string>

    <string name="hot_hotel">Khách sạn nổi tiếng</string>
    <string name="popular_destinations">Địa điểm phổ biến</string>
    <string name="booking">Đặt phòng</string>
    <string name="booking_id">Mã đặt phòng</string>
    <string name="booking_time">Thời gian đặt phòng</string>
    <string name="check_in">Nhận phòng</string>
    <string name="check_out">Trả phòng</string>
    <string name="hotel_name">Tên khách sạn</string>
    <string name="room_type">Loại phòng</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="tong_cong">Tổng cộng</string>
    <string name="trang_thai_thanh_toan">Trạng thái thanh toán</string>
    <string name="trang_thai">Đang chờ thanh toán</string>
    <string name="trang_thai_2">Đã thanh toán</string>
    <string name="phuong_thuc">Thanh toán tại khách sạn</string>
    <string name="ph_ng_th_c_thanh_to_n">Phương thức thanh toán</string>
    <string name="please_select_area">Vui lòng chọn khu vực</string>
    <string name="confirm_information">Xác nhận thông tin</string>
    <string name="booking_type">Hình thức đặt phòng</string>
    <string name="your_name">Tên của bạn</string>
    <string name="mobile_number">Số điện thoại</string>
    <string name="next">Tiếp theo</string>
    <string name="choose_payment">Tiến hành thanh toán</string>
    <string name="ch_n_ph_ng_th_c_thanh_to_n">Chọn phương thức thanh toán</string>
    <string name="ch_nh_s_ch_amp_i_u_kho_n"><![CDATA[Chính sách & Điều khoản]]></string>
    <string name="ch_nh_s_ch_hu_ph_ng">Chính sách huỷ phòng</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="booked">Đã đặt</string>
    <string name="t_ph_ng_th_nh_c_ng">Đặt phòng thành công!</string>
    <string name="b_n_t_ph_ng_th_nh_c_ng_t_i_kh_ch_s_n">Bạn đã đặt phòng thành công tại khách sạn</string>
    <string name="c_m_n_v_ch_c_b_n_vui_v">Cảm ơn và chúc bạn vui vẻ</string>
    <string name="chi_ti_t_t_ph_ng">Chi tiết đặt phòng</string>
    <string name="select_room">Chọn phòng</string>
    <string name="ki_m_tra_t_ph_ng_c_a_b_n">Kiểm tra đặt phòng của bạn</string>
    <string name="favorites">Yêu thích</string>
    <string name="b_n_ch_a_ng_nh_p_vui_l_ng_ng_nh_p_ti_p_t_c">Bạn chưa đăng nhập. Vui lòng đăng nhập để tiếp tục</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="th_m_ph_ng">Thêm phòng</string>
    <string name="ang_ch_thanh_to_n">Đang chờ thanh toán</string>
    <string name="one_night">Một đêm</string>
    <string name="hotel">Khách sạn</string>
    <string name="name">Tên:</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="address">Địa chỉ:</string>
    <string name="about">Thông tin:</string>
    <string name="update">Cập nhật</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="filter">Lọc</string>
    <string name="sort">Sắp xếp</string>
    <string name="enter_your_review">Nhập đánh giá của bạn</string>
    <string name="daily">Hằng ngày</string>
    <string name="ph_ng_n">Phòng đơn</string>
    <string name="_1_days">1 ngày</string>
    <string name="facilities">Tiện ích</string>
    <string name="book_now">Đặt phòng ngay bây giờ</string>
    <string name="enter_a_hotel_city_or_address">Tìm khách sạn, thành phố hoặc một địa chỉ</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_your_password">Quên mật khẩu?</string>
    <string name="or">hoặc</string>
    <string name="don_t_have_an_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="rewrite_password">Nhập lại mật khẩu</string>
    <string name="introduction">Giới thiệu</string>
    <string name="bookings">Những khách sạn đã đặt</string>
    <string name="let_s_enjoy">Hãy Tận Hưởng</string>
    <string name="your_vacation">Kì Nghỉ Của Bạn!</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="language">Ngôn ngữ</string>
    <string name="contact_us">Liên hệ với chúng tôi</string>
    <string name="sign_up_now_and_book_for_a_great_deal">Đăng kí ngay và đặt phòng ngay bây giờ để nhận được những ưu đãi tốt.</string>
    <string name="sign_in_sign_up">Đăng nhập/ Đăng kí</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="qu_n_l_ph_ng">Quản lí phòng</string>
    <string name="s_p_x_p_theo">Sắp xếp theo</string>
    <string name="pay_with_zalo_pay">Thanh toán với Zalo Pay</string>
    <string name="_24_hour_front_desk">Quầy lễ tân 24/7</string>
    <string name="pay_at_hotel">Thanh toán tại khách sạn</string>
    <string name="apply">Áp dụng</string>
    <string name="paymentcancel">Thanh toán bị hủy</string>
    <string name="paymenterror">Thanh toán thất bại</string>
    <string name="upload">Đang cập nhật</string>
    <string name="profilesaved">Hồ sơ đã được lưu</string>
    <string name="faileduploadimage">Xảy ra lỗi khi tải ảnh lên</string>
    <string name="fillinemail">Vui lòng nhập Email</string>
    <string name="resetlinksent">Đường dẫn thiết lập lại mật khẩu đã được gửi đến Email của bạn</string>
    <string name="error">\"Lỗi! \"</string>
    <string name="night">đêm</string>
    <string name="selectdates">Chọn ngày</string>
    <string name="About">Thông tin</string>
    <string name="reviews">Đánh giá</string>
    <string name="permissiondenied">Quyền bị từ chối</string>
    <string name="fillinpassword">Vui lòng nhập mật khẩu</string>
    <string name="signinsuccessfully">Đăng nhập thành công</string>
    <string name="signinfailed">Đăng nhập không thành công</string>
    <string name="errorcode">\"Lỗi! \nMã lỗi: \"</string>
    <string name="passover6char">Vui lòng nhập Password dài hơn 6 kí tự</string>
    <string name="rightrewritepass">Vui lòng nhập đúng Password</string>
    <string name="emailsent">Email xác nhận đã được gửi</string>
    <string name="failsentemail">\"Email xác nhận chưa được gửi\nLỗi: \"</string>
    <string name="verifyemail">Hãy xác nhận Email của bạn</string>
    <string name="emailverified">Email đã được xác nhận</string>
    <string name="UpdatingHotelInfo">Đang cập nhập thông tin về khách sạn</string>
    <string name="ChangeLanguage">Thay đổi ngôn ngữ thành công</string>
    <string name="notification">Thông Báo</string>
    <string name="WantToExit">Bạn có muốn thoát không?</string>
    <string name="No">Không</string>
    <string name="Yes">Có</string>
    <string name="PriceIncrese">Giá tăng dần</string>
    <string name="PriceDecreasing">Giá giảm dần</string>

    <string name="my_vouchers">Kho voucher</string>
    <string name="copy_code">Sao chép mã</string>
    <string name="discount">Giảm giá</string>
    <string name="copied">Đã sao chép</string>
    <string name="cancel_booking">Huỷ đặt phòng</string>
    <string name="qr_check_in">Mã QR</string>
    <string name="uittrip_notification">UitTrip thông báo</string>
    <string name="t_ph_ng">[Đã đặt phòng]</string>
    <string name="b_n_x_c_nh_n_c_t_ph_ng">Bạn đã xác nhận được đặt phòng</string>
    <string name="th_ng_b_o">Thông báo</string>
    <string name="cancelbooking">Huỷ đặt phòng?</string>
    <string name="are_you_sure_you_want_to_to_cancel_this_booking">Bạn có muốn huỷ đặt phòng này?</string>
    <string name="c">Có</string>
    <string name="hu">Không</string>
    <string name="nh_p_m_voucher">Nhập mã voucher</string>
    <string name="p_d_ng">Áp dụng</string>
    <string name="ti_n_ph_ng">Tiền phòng</string>
    <string name="giam_gia">Giảm giá</string>
    <string name="ap_dung_ma_thanh_cong">Áp dụng mã thành công</string>
    <string name="ap_dung_ma_that_bai">Áp dụng mã thất bại</string>
    <string name="loading">Đang tải...</string>
    <string name="nhan_voucher">Bạn vừa nhận được 1 voucher</string>
    <string name="nh_gi">Đánh giá</string>
    <string name="choose_image">Chọn ảnh</string>
    <string name="add_review">Thêm nhận xét thành công</string>
    <string name="view_review">Xem đánh giá của bạn</string>
    <string name="update_review">Cập nhật thành công</string>
    <string name="delete_review">Xoá thành công</string>
    <string name="plan_your_trip">Lên kế hoạch</string>
    <string name="l_n_k_ho_ch_cho_nh_ng_chuy_n_i_xa_th_c_hi_n_am_m_c_a_b_n">Lên kế hoạch cho những chuyến đi xa, thực hiện đam mê của bạn</string>
    <string name="book_your_hotel">Đặt khách sạn</string>
    <string name="sau_khi_d_l_n_k_ho_ch_cho_chuy_n_i_h_y_t_ph_ng_n_o">Sau khi dã lên kế hoạch cho chuyện đi, hãy đặt phòng nào!</string>
    <string name="enjoy_your_trip">Tận hưởng!</string>
    <string name="s_ng_c_ng_am_m_n_o_t_n_h_ng_chuy_n_i_nh">Sống cùng đam mê nào! Tận hưởng chuyến đi nhé</string>
    <string name="get_started">Bắt đầu</string>
    <string name="GPS_title">Bật định vị</string>
    <string name="GPS_content">Có vẻ như hệ thống định vị của bạn đã bị tắt, bạn có muốn bật nó lên không?</string>


</resources>
