<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/review" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uittrip_notification"
                android:fontFamily="@font/helveticaneue_medium"
                android:textColor="@color/black"
                android:textSize="15dp"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txtBooked"
                    android:layout_height="wrap_content"
                    android:textColor="@color/booked_text"
                    android:text="@string/t_ph_ng"
                    android:fontFamily="@font/helveticaneue_medium"/>
                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/b_n_x_c_nh_n_c_t_ph_ng"
                    android:fontFamily="@font/helveticaneue_medium"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="right"
                android:text="05:18 03/06/2022"
                android:fontFamily="@font/helveticaneue_light"
                android:layout_height="wrap_content"
                android:id="@+id/txtDate"/>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>