<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:elevation="20dp"
    tools:context=".activities.Confirm1Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:elevation="30dp"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:collapsedTitleGravity="center"
                    app:contentScrim="@color/primary"
                    app:elevation="20dp"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:titleCollapseMode="fade">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/money_flow"
                            app:tint="@color/primary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:text="@string/choose_payment"
                            android:fontFamily="@font/helveticaneue_medium"
                            android:textColor="@color/black"
                            android:textSize="15dp" />

                        <com.shuhart.stepview.StepView
                            android:id="@+id/step_view"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="16dp"
                            app:sv_animationType="Line"
                            app:sv_doneCircleColor="@color/primary"
                            app:sv_doneCircleRadius="12dp"
                            app:sv_doneStepLineColor="@color/primary"
                            app:sv_doneStepMarkColor="@color/white"
                            app:sv_nextStepCircleColor="@color/grey"
                            app:sv_nextStepCircleEnabled="true"
                            app:sv_nextStepLineColor="@color/grey"
                            app:sv_selectedCircleColor="@color/primary"
                            app:sv_selectedCircleRadius="12dp"
                            app:sv_selectedStepNumberColor="@color/white"
                            app:sv_stepLineWidth="1dp"
                            app:sv_stepNumberTextSize="12sp"
                            app:sv_stepPadding="4dp"
                            app:sv_stepViewStyle="@style/StepView" />
                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:elevation="20dp"
                        app:layout_collapseMode="pin"
                        app:navigationIcon="@drawable/ic_action_back"></androidx.appcompat.widget.Toolbar>
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <View
                android:id="@+id/toolbar_shadow"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/toolbar_dropshadow" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingHorizontal="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/thanh_toan"
                    android:textColor="@color/black"
                    android:textSize="25dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_type"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtBookingType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:text="@string/one_night"
                        android:textColor="@color/black" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/hotel_name" />

                    <TextView
                        android:id="@+id/nameHotel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:text="Kieu Hoang Yen Hotel"
                        android:textColor="@color/black" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="@color/black"
                        android:text="@string/room_type" />

                    <TextView
                        android:id="@+id/txtTypeRoom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:text="@string/hotel"
                        android:textColor="@color/black"
                        android:textDirection="rtl" />
                </RelativeLayout>

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/ch_n_ph_ng_th_c_thanh_to_n"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtDiscount"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/custom_input"
                        android:drawablePadding="12dp"
                        android:fontFamily="@font/helveticaneue_light"
                        android:hint="@string/nh_p_m_voucher"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"></EditText>

                    <Button
                        android:id="@+id/btnApply"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:backgroundTint="@color/grey"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/p_d_ng">

                    </Button>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDiscountStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:visibility="gone" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticaneue_medium"

                    android:text="@string/thanh_toan"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="15dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/ti_n_ph_ng" />

                    <TextView
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:textColor="@color/black"
                        android:textDirection="rtl" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="@color/black"
                        android:text="@string/giam_gia" />

                    <TextView
                        android:id="@+id/txtSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:textColor="@color/black"
                        android:textDirection="rtl" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:text="@string/tong_cong"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txtTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/helveticaneue_medium"
                        android:text="330 000"
                        android:textColor="@color/primary"
                        android:textSize="25dp" />
                </RelativeLayout>

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/ch_nh_s_ch_amp_i_u_kho_n"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/ch_nh_s_ch_hu_ph_ng"
                    android:textColor="@color/black"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/txtCancelPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:text="@string/room_type" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/helveticaneue_medium"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:text="@string/x_c_nh_n"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/primary"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
